fixed scrollbar

--- a/src/components/home/ReviewsCarousel.module.css
+++ b/src/components/home/ReviewsCarousel.module.css
@@ -52,7 +52,8 @@
   font-size: 1.2rem;
   border: none;
   cursor: pointer;
-  color: black;
+  color: gray;
+  padding-top: 5px;
   padding-left: 0px;
   text-decoration: none;
 }
